# OpenGLCourse

./: CMakeLists.txt  IndexBuffer.cpp  IndexBuffer.hpp  OpenGLCourse.cpp  Renderer.cpp  Renderer.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.cpp  VertexBufferLayout.hpp
resources/shaders/: Basic.shader
